fix: fixed units overflow issue (#1343)
* fix: fixed units overflow issue

* refactor: refactor code for desktop and xl screen

* refactor: fixed refactor issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -173,6 +173,10 @@
     }
   }
 
+  .navigation-tab-width {
+    max-width: 30rem;
+  }
+
   .sequence-navigation-dropdown {
     .dropdown-menu .btn {
       flex-basis: 100%;
